--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>mydevops</groupId>
-  <artifactId>devops-mv-webapp2</artifactId>
+  <artifactId>devops-mvn-webapp2</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
 
-  <name>devops-mv-webapp2 Maven Webapp</name>
+  <name>devops-mvn-webapp2 Maven Webapp</name>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -29,7 +29,7 @@
   </dependencies>
 
   <build>
-    <finalName>devops-mv-webapp2</finalName>
+    <finalName>devops-mvn-webapp2</finalName>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <plugin>
